--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,7 +25,7 @@ timeout: 1200s
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$_SERVICE_NAME:$COMMIT_SHA'
 
-options:
-  logging: CLOUD_LOGGING_ONLY
+#options:
+  #logging: CLOUD_LOGGING_ONLY
 
 #serviceAccount: 'my-service-account@my-project.iam.gserviceaccount.com'
